tests/ui/closures/correct-args-on-call-suggestion.stderr
error[E0308]: mismatched types
  --> $DIR/correct-args-on-call-suggestion.rs:5:18
   |
LL |     let x = |a: i32, b: i32| a + b;
   |             ---------------- the found closure
LL |     let y: i32 = x;
   |            ---   ^ expected `i32`, found closure
   |            |
   |            expected due to this
   |
   = note: expected type `i32`
           found closure `{closure@$DIR/correct-args-on-call-suggestion.rs:4:13: 4:29}`
help: use parentheses to call this closure
   |
LL |     let y: i32 = x(/* i32 */, /* i32 */);
   |                   ++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
